Case-insensitive header key match